--- a/src/ZeeDash.API.Abstractions/ZeeDash.API.Abstractions.csproj
+++ b/src/ZeeDash.API.Abstractions/ZeeDash.API.Abstractions.csproj
@@ -9,6 +9,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="3.6.4" />
+    <PackageReference Include="NUlid" Version="1.7.0" />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
   </ItemGroup>
 
