--- a/src/ZeeDash.API.Grains/ZeeDash.API.Grains.csproj
+++ b/src/ZeeDash.API.Grains/ZeeDash.API.Grains.csproj
@@ -10,6 +10,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Orleans.Core" Version="3.6.4" />
     <PackageReference Include="Microsoft.Orleans.Runtime.Abstractions" Version="3.6.4" />
+    <PackageReference Include="NRedisGraph" Version="1.7.0" />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
   </ItemGroup>
 
