--- a/src/ZeeDash.API.Client/ZeeDash.API.Client.csproj
+++ b/src/ZeeDash.API.Client/ZeeDash.API.Client.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup Label="Package References">
+    <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
     <PackageReference Include="Microsoft.Orleans.Client" Version="3.6.4" />
     <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="3.6.4" />
