--- a/src/ZeeDash.API.Client/ZeeDash.API.Client.csproj
+++ b/src/ZeeDash.API.Client/ZeeDash.API.Client.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Orleans.Clustering.Redis" Version="3.2.2" />
+    <PackageReference Include="xunit.assert" Version="2.4.2" />
   </ItemGroup>
 
   <ItemGroup Label="Project References">
