Fix GraphQL integration tests projet

--- a/tests/ZeeDash.API.GraphQLServer.IntegrationTest/ZeeDash.API.GraphQLServer.IntegrationTest.csproj
+++ b/tests/ZeeDash.API.GraphQLServer.IntegrationTest/ZeeDash.API.GraphQLServer.IntegrationTest.csproj
@@ -19,8 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
-  <ItemGroup Label="Project References">
-    <ProjectReference Include="..\..\Source\ZeeDash.API.GraphQLServer\ZeeDash.API.GraphQLServer.csproj" />
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\ZeeDash.API.GraphQLServer\ZeeDash.API.GraphQLServer.csproj" />
   </ItemGroup>
 
 </Project>
